--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "firebase": "^7.14.5",
-    "marked": "^0.8.0",
+    "markdown-to-jsx": "^7.0.1",
+    "markdown-toc-unlazy": "^1.0.1",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
