素のReactからNext（SSG）に移行

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,11 @@
 {
   "hosting": {
-    "public": "build",
+    "site": "yaki-lab",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
